delete some data stuff

--- a/notebooks/Maps_generalised.ipynb
+++ b/notebooks/Maps_generalised.ipynb
@@ -204,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Map stuff"
+    "# Settings"
    ]
   },
   {
@@ -673,13 +673,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if sim_bool:\n",
-    "    df_extra = MF.apply_cuts_to_df(df0,spatial_cuts_dict)\n",
-    "    print(f\"Working with sim. There are {len(df_extra)} stars.\")\n",
-    "    \n",
-    "if data_bool:\n",
-    "    o_df_extra = MF.apply_cuts_to_df(data,spatial_cuts_dict)\n",
-    "    print(f\"Working with observations. There are {len(o_df_extra)} stars.\")"
+    "df_extra = MF.apply_cuts_to_df(df0,spatial_cuts_dict)\n",
+    "print(f\"Working with sim. There are {len(df_extra)} stars.\")"
    ]
   },
   {
@@ -695,12 +690,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if sim_bool:\n",
-    "    young_and_old = True # a single age division into young and old\n",
-    "    # young_and_old = False # a continuum of ages\n",
-    "\n",
-    "if data_bool:\n",
-    "    halo_bool = False"
+    "young_and_old = True # a single age division into young and old\n",
+    "# young_and_old = False # a continuum of ages"
    ]
   },
   {
@@ -709,41 +700,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if sim_bool:\n",
-    "    if young_and_old:\n",
-    "        age_min = 4\n",
-    "        young_max = 7\n",
-    "        old_min = 9.5\n",
-    "        old_max = 10\n",
+    "if young_and_old:\n",
+    "    age_min = 4\n",
+    "    young_max = 7\n",
+    "    old_min = 9.5\n",
+    "    old_max = 10\n",
     "\n",
-    "        age_lowlims = [age_min,old_min]\n",
-    "        age_highlims =[young_max,old_max]\n",
-    "            \n",
-    "        age_range = [age_min, old_min]\n",
-    "        print(\"Ages\",[[age_min,young_max],[old_min,old_max]])\n",
+    "    age_lowlims = [age_min,old_min]\n",
+    "    age_highlims =[young_max,old_max]\n",
     "\n",
-    "#         label_young = f\"${age_min}<$ Age/Gyr $<{young_max}$\"\n",
-    "#         label_old = f\"${old_min} <$Age/Gyr$<{old_max}$\"\n",
-    "        label_young = \"Young\"\n",
-    "        label_old = \"Old\"\n",
-    "        \n",
-    "        young_lims = [age_min,young_max]\n",
-    "        old_lims = [old_min,old_max]\n",
-    "        \n",
-    "        df_ages = [\n",
-    "            MF.apply_cuts_to_df(df_extra,{\"age\": young_lims}),\n",
-    "            MF.apply_cuts_to_df(df_extra,{\"age\": old_lims})\n",
-    "        ]\n",
+    "    age_range = [age_min, old_min]\n",
+    "    print(\"Ages\",[[age_min,young_max],[old_min,old_max]])\n",
     "\n",
-    "    else:\n",
-    "        age_min_real = 9\n",
-    "        age_max = 10\n",
-    "        age_step = 0.2\n",
-    "        age_range = np.arange(age_min_real,age_max,age_step)\n",
-    "        print(age_range)\n",
+    "#     label_young = f\"${age_min}<$ Age/Gyr $<{young_max}$\"\n",
+    "#     label_old = f\"${old_min} <$Age/Gyr$<{old_max}$\"\n",
+    "    label_young = \"Young\"\n",
+    "    label_old = \"Old\"\n",
     "\n",
-    "        #If you do not want the minimum age to be special, then\n",
-    "        age_min = -1"
+    "    young_lims = [age_min,young_max]\n",
+    "    old_lims = [old_min,old_max]\n",
+    "\n",
+    "    df_ages = [\n",
+    "        MF.apply_cuts_to_df(df_extra,{\"age\": young_lims}),\n",
+    "        MF.apply_cuts_to_df(df_extra,{\"age\": old_lims})\n",
+    "    ]\n",
+    "\n",
+    "else:\n",
+    "    age_min_real = 9\n",
+    "    age_max = 10\n",
+    "    age_step = 0.2\n",
+    "    age_range = np.arange(age_min_real,age_max,age_step)\n",
+    "    print(age_range)\n",
+    "\n",
+    "    #If you do not want the minimum age to be special, then\n",
+    "    age_min = -1"
    ]
   },
   {
@@ -821,68 +811,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if data_bool: # choose metallicity cuts\n",
-    "    \n",
-    "    # metal_lowcut = -9999\n",
-    "    metal_lowcut = -1\n",
-    "    \n",
-    "    data_trim = o_df_extra[o_df_extra['FeH']>=metal_lowcut]\n",
-    "\n",
-    "    print(f\"Chose minimum metallicity of {metal_lowcut}\" if metal_lowcut != -9999 else \"No minimum metallicity\")\n",
-    "\n",
-    "    if metal_lowcut != -9999:\n",
-    "        print(f\"Removed {len(o_df_extra)-len(data_trim)} ({MF.return_int_or_dec((len(o_df_extra)-len(data_trim))/len(o_df_extra)*100,2)}%) stars. {len(data_trim)} left\")\n",
-    "    \n",
-    "    metallicity_median = MF.return_int_or_dec(np.median(data[data[\"FeH\"]>=metal_lowcut][\"FeH\"]),2)\n",
-    "    print(\"Median bulge metallicity:\",metallicity_median)\n",
-    "    \n",
-    "    metal_poor_lowlim = None\n",
-    "    metal_poor_highlim = metallicity_median\n",
-    "\n",
-    "    metal_rich_lowlim = metallicity_median\n",
-    "    metal_rich_highlim = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if data_bool:\n",
-    "    \n",
-    "    if metal_poor_lowlim is None:\n",
-    "        poor_condition = poor_condition = o_df_extra[\"FeH\"] <= metal_poor_highlim\n",
-    "        label_poor = fr'[Fe/H]$<{metal_poor_highlim:.2f}$'\n",
-    "    else:\n",
-    "        poor_condition = (o_df_extra[\"FeH\"] < metal_poor_highlim)&(o_df_extra[\"FeH\"] > metal_poor_lowlim)\n",
-    "        label_poor = fr'${metal_poor_lowlim}<$[Fe/H]$<{metal_poor_highlim:.2f}$'\n",
-    "\n",
-    "    if metal_rich_highlim is None:\n",
-    "        rich_condition = o_df_extra[\"FeH\"] > metal_rich_lowlim\n",
-    "        label_rich = fr'[Fe/H]$>{metal_rich_lowlim:.2f}$'\n",
-    "    else:\n",
-    "        rich_condition = (o_df_extra[\"FeH\"] < metal_rich_highlim)&(o_df_extra[\"FeH\"] > metal_rich_lowlim)\n",
-    "        label_rich = fr'${metal_rich_lowlim}<$[Fe/H]$<{metal_rich_highlim:.2f}$'\n",
-    "\n",
-    "    df_metals = [o_df_extra[rich_condition], o_df_extra[poor_condition]]\n",
-    "    \n",
-    "    save_path_metal = f\"{metal_rich_lowlim}to{metal_rich_highlim}_{metal_poor_lowlim}to{metal_poor_highlim}/\"\n",
-    "\n",
-    "    if halo_bool:\n",
-    "        df_metals.append(o_df_extra[o_df_extra[\"FeH\"] < metal_halo_lim])    \n",
-    "        label_halo = fr'(%i) [Fe/H]$<{metal_halo_lim}$'%len(df_metals[2])\n",
-    "        print(\"Working with the halo population\")\n",
-    "\n",
-    "    print(label_rich,len(df_metals[0]),\"\\t\",label_poor,len(df_metals[1]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -896,10 +824,10 @@
    "outputs": [],
    "source": [
     "#create path\n",
-    "save_path = \"graphs/standard_100_min/\"+sim_choice+'/'\n",
+    "save_path = \"/Users/luismi/Desktop/MRes_UCLan/graphs/standard_100_min/\"+sim_choice+\"/\"\n",
     "\n",
-    "if sim_choice == \"708main\" and axisymmetric:\n",
-    "    save_path += 'axisymmetric/'\n",
+    "if axisymmetric:\n",
+    "    save_path += \"axisymmetric/\"\n",
     "    MF.create_dir(save_path)\n",
     "    \n",
     "save_path += f\"{x_variable}{y_variable}_map/\"\n",
@@ -916,11 +844,11 @@
     "\n",
     "main_not_axisymmetric_bool = sim_choice == \"708main\" and not axisymmetric\n",
     "if main_not_axisymmetric_bool:\n",
-    "    save_path += 'rot_angle_'+str(rot_angle)+'/'\n",
+    "    save_path += \"rot_angle_\"+str(rot_angle)+\"/\"\n",
     "    MF.create_dir(save_path)\n",
     "\n",
     "    if x_variable == \"d\":\n",
-    "        save_path += y_variable+\"_step_\"+str(y_step)+'/'\n",
+    "        save_path += y_variable+\"_step_\"+str(y_step)+\"/\"\n",
     "        MF.create_dir(save_path)\n",
     "\n",
     "if young_and_old:\n",
@@ -935,28 +863,14 @@
     "        save_path += f\"{age_min}-{young_max}_{old_min}-{old_max}/\" #Oscar_cuts/\n",
     "    MF.create_dir(save_path)\n",
     "else:\n",
-    "    save_path += \"age_min_\"+str(age_min_real)+'/'\n",
+    "    save_path += \"age_min_\"+str(age_min_real)+\"/\"\n",
     "    MF.create_dir(save_path)\n",
     "    \n",
     "save_path_gridcounts = save_path\n",
     "\n",
-    "vel_string = f\"v{vel_x_variable}v{vel_y_variable}/\" if vel_y_variable != '\\phi' else f\"vRvphi/\"\n",
+    "vel_string = f\"v{vel_x_variable}v{vel_y_variable}/\" if vel_y_variable != \"\\phi\" else f\"vRvphi/\"\n",
     "save_path += vel_string\n",
     "MF.create_dir(save_path)\n",
-    "        \n",
-    "if data_bool:\n",
-    "    save_path += \"data/\"\n",
-    "    MF.create_dir(save_path)\n",
-    "    \n",
-    "    save_path += save_path_metal\n",
-    "    MF.create_dir(save_path)\n",
-    "    \n",
-    "# paper_str = \"paper/\"\n",
-    "# save_path += paper_str\n",
-    "# MF.create_dir(save_path)\n",
-    "    \n",
-    "# save_path += 'vR_positive/'\n",
-    "# MF.create_dir(save_path)\n",
     "        \n",
     "print(\"Saving in\",save_path)"
    ]
