--- a/notebooks/Maps_generalised.ipynb
+++ b/notebooks/Maps_generalised.ipynb
@@ -530,7 +530,7 @@
    "source": [
     "# These functions currently need to be declared after declaring the limits and ticks as I am using them as global variables inside\n",
     "\n",
-    "def configure_ax():\n",
+    "def configure_ax(ax):\n",
     "    ax.xaxis.set_minor_locator(ticker.MultipleLocator(x_minor_locator))\n",
     "    ax.yaxis.set_minor_locator(ticker.MultipleLocator(y_minor_locator))\n",
     "    ax.set_xticks(x_ticks);ax.set_yticks(y_ticks)\n",
@@ -725,8 +725,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save_bool = True\n",
-    "save_bool = False\n",
+    "save_bool = True\n",
+    "# save_bool = False\n",
     "\n",
     "if young_and_old: # check number of stars\n",
     "    \n",
@@ -780,7 +780,7 @@
     "            for y in y_edge: ax.axhline(y,color=\"k\",lw=1)\n",
     "\n",
     "            ax.set_aspect(\"equal\")\n",
-    "            configure_ax()\n",
+    "            configure_ax(ax)\n",
     "            ax.tick_params(axis=\"both\",which=\"both\",direction=\"out\",top=False)\n",
     "            ax.set_title(label_young if ax == axs[0] else label_old)\n",
     "\n",
@@ -1025,14 +1025,14 @@
     "        cmap = get_nondivergent_cmap(map_variable)\n",
     "    return colors, cmap\n",
     "def get_divergent_cmap(map_variable):\n",
-    "    return divergent_cmap if map_variable not in ['vertex','spherical_tilt','tilt'] else cyclic_cmap\n",
+    "    return mplcmaps[\"coolwarm\"] if map_variable not in ['vertex','spherical_tilt','tilt'] else mplcmaps[\"twilight_shifted\"]\n",
     "def get_nondivergent_cmap(map_variable):\n",
     "    if \"error\" in map_variable:\n",
-    "        return sequential_cmap\n",
+    "        return mplcmaps[\"Reds\"]\n",
     "    elif vel_x_variable+vel_y_variable == 'R\\phi' and map_variable == 'mean_vy':\n",
-    "        return coolwarm_negative_cmap\n",
+    "        return PH.get_blues_cmap()\n",
     "    elif map_variable in [\"std_vx\",\"std_vy\"]:\n",
-    "        return sequential_cmap\n",
+    "        return mplcmaps[\"Reds\"]\n",
     "    else:\n",
     "        raise ValueError(f\"no non-divergent cmap defined for {map_variable}\")\n",
     "\n",
@@ -1107,8 +1107,8 @@
     "\n",
     "plotting_lines_bool = x_variable+y_variable==\"xy\"\n",
     "\n",
-    "plotting_line_labels = True\n",
-    "highlight_lines = False\n",
+    "plotting_line_labels = True # This only has effect in the double maps for now\n",
+    "highlight_lines = False # This only has effect in the double maps for now\n",
     "\n",
     "if plotting_lines_bool:\n",
     "    line_label_fontsize = \"x-small\" # see https://stackoverflow.com/questions/62288898\n",
@@ -1211,7 +1211,7 @@
     "\n",
     "    corr_limit_bool = False\n",
     "    inner_corr_contour = 0.05\n",
-    "    ani_leveldiff_factor = 2\n",
+    "    corr_leveldiff_factor = 2\n",
     "\n",
     "    ani_delete_bool = False\n",
     "    ani_skip = 1 # number of outer levels to skip\n",
@@ -1743,7 +1743,7 @@
     "                slope = -x_intersect / np.sqrt(radius**2 - x_intersect**2)\n",
     "                rot = -np.degrees(np.arctan(slope))\n",
     "\n",
-    "                indices_white_background = [0] if y_variable == \"z\" and np.diff(min_agelims)[0] == 1 else []\n",
+    "                indices_white_background = [0] if y_variable == \"z\" and np.diff(age_range_min)[0] == 1 else []\n",
     "                bbox = {'color':'white','boxstyle':'round','alpha':0.8} if index in indices_white_background else None\n",
     "                d_color = 'k' if index in indices_white_background else 'white'\n",
     "\n",
@@ -1762,7 +1762,7 @@
     "        x_text = 8/9*x_min\n",
     "        y_text = (5/6 if y_variable == \"y\" else 4/5)*y_max\n",
     "\n",
-    "        indices_white_background = [0] if y_variable == \"z\" and np.diff(min_agelims)[0] == 1 else []\n",
+    "        indices_white_background = [0] if y_variable == \"z\" and np.diff(age_range_min)[0] == 1 else []\n",
     "\n",
     "        bbox = {'color':'white','boxstyle':'round','alpha':0.8} if index in indices_white_background else None\n",
     "        age_text_colour = 'k' if index in indices_white_background else 'white'\n",
@@ -1792,13 +1792,12 @@
     "    \n",
     "if True: # filename and save\n",
     "\n",
-    "    special_lines_string = '_specialbLines' if (y_variable == 'z' and special_b_lines_bool) else ''\n",
     "    n_bins_string = f'_bins{n_bins}'\n",
     "    gauss_sigma_string = f'_gauss{density_contours_sigma}'\n",
     "    extend_string = f'_{cbar_extend}Extend' if cbar_extend != 'neither' else ''\n",
     "    lines_string = \"_noLoS\" if not plotting_lines_bool else \"\"\n",
     "\n",
-    "    filename = \"density\" + special_lines_string + n_bins_string + gauss_sigma_string + extend_string + lines_string\n",
+    "    filename = \"density\" + n_bins_string + gauss_sigma_string + extend_string + lines_string\n",
     "    print(filename)\n",
     "    \n",
     "    if save_density_bool:\n",
@@ -1975,6 +1974,8 @@
     "last_row_bool = True\n",
     "cbar_difference_label = True\n",
     "\n",
+    "sharing_diff_cbar_bool = False\n",
+    "\n",
     "contours_diff_on = False"
    ]
   },
@@ -2113,7 +2114,7 @@
     "        max_val_and_diff.append([vmax, max_difference])\n",
     "    \n",
     "    if sharing_cbar_bool:\n",
-    "        for shared_difmap_list in shared_difmap_variables:\n",
+    "        for shared_difmap_list in shared_cbar_variables:\n",
     "            try:\n",
     "                first_index = list(difmap_variables).index(shared_difmap_list[0])\n",
     "                second_index = list(difmap_variables).index(shared_difmap_list[1])\n",
@@ -2400,7 +2401,7 @@
     "        last_row_string = '_noBottom' if not last_row_bool else ''\n",
     "        extra_var_string = f\"{extra_variable_min}{extra_variable}{extra_variable_max}\"\n",
     "\n",
-    "        filename = x_variable+y_variable+f\"_difmap_\"+difmap_variables[-2]+'_'+difmap_variables[-1]+sharing_string+last_row_string\n",
+    "        filename = x_variable+y_variable+f\"_difmap_\"+difmap_variables[0]+'_'+difmap_variables[1]+sharing_string+last_row_string\n",
     "\n",
     "        # filename += '_anicorr0.05' if inner_anicorr_contour != 0.1 else ''\n",
     "        \n",
@@ -2574,7 +2575,7 @@
     "            if contour_number is None: # extend and cmap\n",
     "                levels = get_levels(map_variable,vmin,vmax)\n",
     "                cbar_extend = PH.get_cbar_extend(min(levels),max(levels),vmin,vmax)\n",
-    "                colors, cmap = get_colors_and_cmap(levels, map_variable, cbar_extend, diff = False)\n",
+    "                colors, cmap = get_colors_and_cmap(levels, map_variable, cbar_extend)\n",
     "            else:\n",
     "                raise ValueError(\"Using an automatically-generated number of contours is currently broken, as the levels will differ between young and old,\"+\\\n",
     "                                 \" so the colorbar can only represent one of them\")\n",
@@ -2812,6 +2813,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Settings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2826,37 +2834,8 @@
     "y_range_plot = y_range + y_step/2\n",
     "xy_plot = np.array(np.meshgrid(x_range_plot,y_range_plot))\n",
     "\n",
-    "x_ticks = mapf.get_map_tick_range(x_variable,include_lims=True)\n",
-    "y_ticks = mapf.get_map_tick_range(y_variable,include_lims=True)\n",
-    "\n",
     "nrow = len(map_dict[\"tilt_abs\"][0])\n",
     "ncol = len(map_dict[\"tilt_abs\"][0,0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_path_ellipses = save_path + 'ellipses/'\n",
-    "MF.create_dir(save_path_ellipses)\n",
-    "    \n",
-    "print(save_path_ellipses)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Choose"
    ]
   },
   {
@@ -2920,6 +2899,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "save_path_ellipses = save_path + 'ellipses/'\n",
+    "MF.create_dir(save_path_ellipses)\n",
+    "    \n",
+    "print(save_path_ellipses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#color other vel\n",
     "\n",
     "# color_othervel_bool = True\n",
@@ -2960,24 +2951,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "color_coding_list = ['spherical_tilt_abs']\n",
-    "\n",
-    "# color_coding_list = ['tilt','tilt_abs','correlation','anisotropy','mean_vx','mean_vy','std_vx','std_vy']\n",
-    "\n",
-    "# color_coding_list = ['abs_spherical_tilt','tilt','tilt_abs','correlation','anisotropy','mean_vx','mean_vy','std_vx','std_vy']\n",
-    "# if vel_x_variable+vel_y_variable != 'R\\phi':\n",
-    "#     color_coding_list.append('spherical_tilt')\n",
-    "\n",
-    "if \"spherical_tilt_abs\" in color_coding_list:\n",
-    "    map_dict[\"spherical_tilt_abs\"] = copy.copy(map_dict[\"spherical_tilt\"])\n",
-    "    values_to_modify = map_dict[\"spherical_tilt_abs\"][np.abs(map_dict[\"spherical_tilt_abs\"])>45]\n",
-    "    map_dict[\"spherical_tilt_abs\"][np.abs(map_dict[\"spherical_tilt_abs\"])>45] = np.sign(values_to_modify)*(90 - np.abs(values_to_modify))\n",
-    "    \n",
-    "    kinematic_symbols_dict[\"spherical_tilt_abs\"] = copy.copy(kinematic_symbols_dict[\"spherical_tilt\"])\n",
-    "    kinematic_units_dict[\"spherical_tilt_abs\"] = copy.copy(kinematic_units_dict[\"spherical_tilt\"])\n",
+    "color_coding_list = [\"correlation\"]\n",
+    "# color_coding_list = [\"tilt\",\"tilt_abs\",\"correlation\",\"anisotropy\",\"mean_vx\",\"mean_vy\",\"std_vx\",\"std_vy\"]\n",
+    "# color_coding_list = [\"abs_spherical_tilt\",\"tilt\",\"tilt_abs\",\"correlation\",\"anisotropy\",\"mean_vx\",\"mean_vy\",\"std_vx\",\"std_vy\"]\n",
     "    \n",
     "if True: #For quantities involving R_hat, do not plot ellipses closest to the origin because the radial direction changes direction too drastically across the bin\n",
-    "    cyl_bool = (color_othervel_bool and othervel_cylindrical) or vel_x_variable+vel_y_variable == 'R\\phi'\n",
+    "    cyl_bool = (color_othervel_bool and othervel_cylindrical) or vel_x_variable+vel_y_variable == \"R\\phi\"\n",
     "    if cyl_bool or \"spherical_tilt\" in color_coding_list:\n",
     "        skip_central_ellipses = True\n",
     "    else: \n",
@@ -2995,8 +2974,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_radii = True\n",
-    "# plot_radii = False\n",
+    "# plot_radii = True\n",
+    "plot_radii = False\n",
     "\n",
     "# predefined_cbar_lims = True\n",
     "predefined_cbar_lims = False"
@@ -3033,11 +3012,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# aspect_equal = True\n",
-    "aspect_equal = False\n",
+    "aspect_equal = True\n",
+    "# aspect_equal = False\n",
     "\n",
-    "save_bool = True\n",
-    "# save_bool = False"
+    "# save_bool = True\n",
+    "save_bool = False"
    ]
   },
   {
