axisym & bar angle in save path

--- a/notebooks/other_notebooks/errors.ipynb
+++ b/notebooks/other_notebooks/errors.ipynb
@@ -226,7 +226,7 @@
     "# sim_choice = \"708mainDiff5\"\n",
     "\n",
     "rot_angle = 27\n",
-    "axisymmetric = False\n",
+    "axisymmetric = True\n",
     "pos_scaling = 1.7\n",
     "\n",
     "filename = load_sim.build_filename(choice=sim_choice,rot_angle=rot_angle,R0=R0,axisymmetric=axisymmetric,zabs=zabs,pos_factor=pos_scaling,GSR=GSR)"
@@ -435,13 +435,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_save_path_MC(perturbed_vars, data_bool):\n",
+    "def get_save_path_MC(perturbed_vars, data_bool, sim_choice=None, axisymmetric=False, rot_angle=None):\n",
     "    \n",
     "    save_path = general_path + f\"graphs/other_plots/MonteCarlo/\" + str.join(\",\", perturbed_vars) + \"/\"\n",
     "    MF.create_dir(save_path)\n",
     "\n",
     "    save_path += \"data/\" if data_bool else \"model/\"\n",
     "    MF.create_dir(save_path)\n",
+    "    \n",
+    "    if not data_bool:\n",
+    "        save_path += sim_choice + \"/\"\n",
+    "        MF.create_dir(save_path)\n",
+    "\n",
+    "        if axisymmetric:\n",
+    "            save_path += \"axisym/\"\n",
+    "            MF.create_dir(save_path)\n",
+    "\n",
+    "        elif rot_angle != 27:\n",
+    "            save_path += f\"barangle{rot_angle}/\"\n",
+    "            MF.create_dir(save_path)\n",
     "    \n",
     "    return save_path"
    ]
@@ -546,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = get_save_path_MC(perturbed_vars=perturbed_vars,data_bool=data_bool)\n",
+    "save_path = get_save_path_MC(perturbed_vars=perturbed_vars,data_bool=data_bool, sim_choice=sim_choice, rot_angle=rot_angle, axisymmetric=axisymmetric)\n",
     "\n",
     "save_path += \"multiple_frac_errors/\"\n",
     "MF.create_dir(save_path)\n",
@@ -801,7 +813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = get_save_path_MC(perturbed_vars=perturbed_vars,data_bool=data_bool)\n",
+    "save_path = get_save_path_MC(perturbed_vars=perturbed_vars,data_bool=data_bool, sim_choice=sim_choice, rot_angle=rot_angle, axisymmetric=axisymmetric)\n",
     "\n",
     "save_path += \"multiple_frac_errors/\"\n",
     "MF.create_dir(save_path)\n",
@@ -816,7 +828,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spatial_cuts = {\"l\":[-2,2],\"b\":[3.51,6.6]}\n",
+    "spatial_cuts = {\"l\":[-2,2],\"b\":[3,6]}\n",
     "affected_cut = {\"R\":[0,3.5]}\n",
     "\n",
     "pop_cuts_list = [\n",
@@ -832,8 +844,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "func_list = [\"anisotropy\", \"correlation\", \"tilt_abs\"]; func_prefix = \"anicorr\"\n",
-    "# func_list = [\"mean_vx\",\"mean_vy\",\"std_vx\",\"std_vy\",\"anisotropy\", \"correlation\", \"tilt_abs\"]; func_prefix = \"all\""
+    "# func_list = [\"anisotropy\", \"correlation\", \"tilt_abs\"]; func_prefix = \"anicorr\"\n",
+    "func_list = [\"mean_vx\",\"mean_vy\",\"std_vx\",\"std_vy\",\"anisotropy\", \"correlation\", \"tilt_abs\"]; func_prefix = \"all\""
    ]
   },
   {
@@ -869,7 +881,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "repeats = 1000\n",
+    "repeats = 100\n",
     "\n",
     "boot_CI_level = 68"
    ]
@@ -909,7 +921,7 @@
     "\n",
     "            montecarloconfig.error_frac = frac_err\n",
     "\n",
-    "            MC_result = monte_carlo.get_std_MC(function=func,df=df_MC,config=montecarloconfig,true_value=true_value,tilt=tilt,absolute=absolute,R_hat=R_hat,\n",
+    "            MC_result = monte_carlo.get_std_MC(function=func,df=df_MC,config=montecarloconfig,true_value=true_values[a,f],tilt=tilt,absolute=absolute,R_hat=R_hat,\n",
     "                                               vel_x_var=vel_x_var if vx is not None else None,vel_y_var=vel_y_var if vy is not None else None)\n",
     "\n",
     "            all_MC_results[a,f,e] = MC_result.MC_distribution\n",
@@ -970,7 +982,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.rcParams[\"font.size\"] = 25"
+    "plt.rcParams[\"font.size\"] = 22"
    ]
   },
   {
