--- a/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
+++ b/notebooks/other_notebooks/convert_sim_to_numpy.ipynb
@@ -32,24 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import time\n",
-    "import os\n",
-    "\n",
-    "import pynbody"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from plotting.matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
-    "set_matplotlib_params()"
+    "import os"
    ]
   },
   {
@@ -59,7 +42,6 @@
    "outputs": [],
    "source": [
     "import utils.miscellaneous_functions as MF\n",
-    "import plotting.mixed_plots as MP\n",
     "import utils.from_sim_to_numpy as sim_to_np"
    ]
   },
@@ -152,6 +134,31 @@
    "metadata": {},
    "source": [
     "## Step by step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import time\n",
+    "import pynbody"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotting.mixed_plots as MP\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from plotting.matplotlib_param_funcs import set_matplotlib_params,reset_rcParams\n",
+    "set_matplotlib_params()"
    ]
   },
   {
