--- a/notebooks/Maps_generalised.ipynb
+++ b/notebooks/Maps_generalised.ipynb
@@ -97,7 +97,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_map_string_list,divergent_map_list = mapf.get_map_string_lists()"
+    "full_map_string_list,divergent_map_list = mapf.get_map_string_lists()\n",
+    "\n",
+    "variable_symbol_dict, variable_units_dict = mapf.get_position_symbols_and_units_dict(zabs=zabs, degree_symbol=degree_symbol)"
    ]
   },
   {
@@ -274,8 +276,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_xy_max = 3.5\n",
-    "_xy_bins = 13\n",
+    "_xy_max = 9\n",
+    "_xy_bins = 36\n",
     "\n",
     "_z_max = 3\n",
     "_z_bins = 11\n",
@@ -284,7 +286,9 @@
     "_l_bins = 15\n",
     "\n",
     "_lat_max = 13\n",
-    "_b_bins = 10"
+    "_b_bins = 10\n",
+    "\n",
+    "_xyz_tick_step = 3"
    ]
   },
   {
@@ -294,9 +298,6 @@
    "outputs": [],
    "source": [
     "# map dictionaries\n",
-    "variable_symbol_dict, variable_units_dict = mapf.get_position_symbols_and_units_dict(zabs=zabs, degree_symbol=degree_symbol)\n",
-    "\n",
-    "_xyz_tick_step = 1\n",
     "\n",
     "map_min_dict = {\n",
     "    \"l\" : -_long_max,\n",
@@ -427,8 +428,8 @@
     "x_variable = \"x\" #d #l\n",
     "y_variable = \"y\"\n",
     "\n",
-    "vel_x_variable = \"R\"\n",
-    "vel_y_variable = \"\\phi\" # Note phi should be given as \\phi\n",
+    "vel_x_variable = \"r\"\n",
+    "vel_y_variable = \"l\" # Note phi should be given as \\phi\n",
     "\n",
     "extra_variable = extra_variable_map[x_variable+y_variable]"
    ]
@@ -854,7 +855,7 @@
     "                                                                    x_var=x_variable,y_var=y_variable,error_type=\"bootstrap\")\n",
     "            \n",
     "            if len(value_dict) != len(full_map_string_list):\n",
-    "                raise ValueError(\"The length of the value_dict list does not match the string list!\")\n",
+    "                raise ValueError(\"The length of `value_dict` does not match the variable list!\")\n",
     "            \n",
     "            for map_string in full_map_string_list:\n",
     "                map_dict[map_string][age_index,y_index,x_index] = value_dict[map_string]\n",
@@ -1630,8 +1631,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save_density_bool = True\n",
-    "save_density_bool = False"
+    "save_density_bool = True\n",
+    "# save_density_bool = False"
    ]
   },
   {
@@ -1823,8 +1824,9 @@
     "\n",
     "if manual_contour_bool:\n",
     "    if x_variable+y_variable == \"xy\":\n",
-    "        density_contour_levels = [ 3500, 8700, 14000, 82000 ]\n",
+    "#         density_contour_levels = [ 3500, 8700, 14000, 82000 ]\n",
     "#         density_contour_levels = [ 700,1000,3500, 5000 ]\n",
+    "        density_contour_levels = [ 500, 1000, 3000, 5000, 10000]\n",
     "    if x_variable+y_variable == \"yz\":\n",
     "        density_contour_levels = [ 3000, 10000, 30000, 300000 ]\n",
     "    if x_variable+y_variable == \"lb\":\n",
@@ -1970,34 +1972,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diff_errors_bool = False\n",
-    "last_row_bool = True\n",
-    "cbar_difference_label = True\n",
-    "\n",
-    "sharing_diff_cbar_bool = False\n",
-    "\n",
-    "contours_diff_on = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aspect_equal = True\n",
-    "# aspect_equal = False\n",
-    "\n",
-    "# save_bool = True\n",
-    "save_bool = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_difmap_gridspec_params(variables, n_rows):\n",
     "    if variables == \"xy\":\n",
     "        if n_rows == 3:\n",
@@ -2072,6 +2046,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "diff_errors_bool = False\n",
+    "last_row_bool = True\n",
+    "cbar_difference_label = True\n",
+    "\n",
+    "sharing_diff_cbar_bool = False\n",
+    "\n",
+    "contours_diff_on = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aspect_equal = True\n",
+    "# aspect_equal = False\n",
+    "\n",
+    "save_bool = True\n",
+    "# save_bool = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for difmap_variables in difmap_variable_list:\n",
     "#     if 'vertex' not in difmap_variables: continue\n",
     "    \n",
@@ -2083,8 +2085,8 @@
     "        symbol_difmap_diff_dict = {}\n",
     "\n",
     "        for index, variable in enumerate(difmap_variables):\n",
-    "            symbol_difmap_dict[index] = kinematic_symbols_dict[variable] + kinematic_units_dict[variable]\n",
-    "            symbol_difmap_diff_dict[index] = kinematic_symbols_dict_diff[variable] + kinematic_units_dict[variable]\n",
+    "            symbol_difmap_dict[index] = kinematic_symbols_dict[variable] + r\" $[\\mathrm{%s}]$\"%kinematic_units_dict[variable]\n",
+    "            symbol_difmap_diff_dict[index] = kinematic_symbols_dict_diff[variable] + r\" $[\\mathrm{%s}]$\"%kinematic_units_dict[variable]\n",
     "\n",
     "    map_arrays_and_diff = [] # elements contain [map array young, map array old, difference]\n",
     "    max_val_and_diff = [] # elements contain [min map value, min difference]\n",
@@ -2442,8 +2444,8 @@
    "source": [
     "# CHOOSE\n",
     "\n",
-    "doublemap_variable_list = [[\"anisotropy\",\"correlation\",\"tilt_abs\"], [\"anisotropy_error_high\",\"correlation_error_high\",\"tilt_abs_error_high\"]]\n",
-    "# doublemap_variable_list = [[\"mean_vx\",\"mean_vy\"],[\"std_vx\",\"std_vy\"]]\n",
+    "# doublemap_variable_list = [[\"anisotropy\",\"correlation\",\"tilt_abs\"], [\"anisotropy_error_high\",\"correlation_error_high\",\"tilt_abs_error_high\"]]\n",
+    "doublemap_variable_list = [[\"mean_vx\",\"mean_vy\"],[\"std_vx\",\"std_vy\"]]\n",
     "\n",
     "left_maps = doublemap_variable_list[0]\n",
     "right_maps = doublemap_variable_list[1]"
@@ -2630,7 +2632,8 @@
     "                        \n",
     "                        pos_shift_dict = {\n",
     "                            3: 0.3,\n",
-    "                            3.5: 0.55\n",
+    "                            3.5: 0.55,\n",
+    "                            9: 15\n",
     "                        }\n",
     "                        pos_shift = pos_shift_dict[x_max]\n",
     "                        \n",
@@ -2660,7 +2663,8 @@
     "                        \n",
     "                        x_shift_dict = {\n",
     "                            3: -0.31,\n",
-    "                            3.5: -0.4\n",
+    "                            3.5: -0.4,\n",
+    "                            9: -0.5\n",
     "                        }\n",
     "                        \n",
     "                        ax.text(x=x_intersect-abs(sun_coords[0])+x_shift_dict[x_max],y=low_y,s=fr\"${radius}$ kpc\",color=line_label_colour,rotation=rot,size=line_label_fontsize)\n",
@@ -2700,7 +2704,7 @@
     "            else:\n",
     "                cbar = fig.colorbar(mappable, cax=cbar_ax, extendfrac='auto', spacing=cbar_spacing)\n",
     "            \n",
-    "            cbar.set_label(kinematic_symbols_dict[map_variable] + kinematic_units_dict[map_variable])\n",
+    "            cbar.set_label(kinematic_symbols_dict[map_variable] + r\" $[\\mathrm{%s}]$\"%kinematic_units_dict[map_variable])\n",
     "\n",
     "            if not heatmap: # cbar ticks\n",
     "                cbar_ax.tick_params(length=cbar_ticksize)\n",
